--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "officegen": "^0.6.5",
     "openai": "^4.20.0",
     "pdf-parse": "^1.1.1",
-    "pdfkit": "^0.17.2"
+    "pdfkit": "^0.17.2",
+    "undici": "^5.29.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
