--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,13 @@
     "googleapis": "^159.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.11.0",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "officegen": "^0.6.5",
     "openai": "^4.20.0",
-    "pdf-parse": "^1.1.1",
+    "pdf-parse": "^1.1.3",
     "pdfkit": "^0.17.2",
     "undici": "^5.29.0"
   },
