--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,29 +9,31 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch"
-    },
+  },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "axios": "^1.6.0",
-    "react-dropzone": "^14.2.0",
-    "react-hook-form": "^7.47.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.0",
+    "formik": "^2.4.6",
+    "next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-dropzone": "^14.2.0",
+    "react-hook-form": "^7.47.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.0",
+    "@testing-library/react": "^13.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "jest": "^29.7.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.0"
+    "jest": "^29.7.0"
   }
 }
