deploy-fullstack-and-fix-amplify-cors
Allow Amplify default domains/preview builds via backend CORS and ensure Amplify exports both API_BASE_URL and NEXT_PUBLIC_API_BASE_URL.
Add a unified CloudFormation + workflow for deploying Amplify + App Runner together.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -443,7 +443,9 @@ jobs:
       run: |
         aws amplify update-app \
           --app-id ${{ steps.get-app-id.outputs.app-id }} \
-          --environment-variables API_BASE_URL=${{ steps.get-backend-url.outputs.backend-url }}
+          --environment-variables \
+            API_BASE_URL=${{ steps.get-backend-url.outputs.backend-url }} \
+            NEXT_PUBLIC_API_BASE_URL=${{ steps.get-backend-url.outputs.backend-url }}
 
     - name: Trigger Frontend Rebuild
       run: |
