canva-integration-full-ops
Add Canva OAuth + template mapping UI, asset uploads, design reuse, preview/validation, and wire required env vars into deploy.

--- a/.github/cloudformation/backend-apprunner.yml
+++ b/.github/cloudformation/backend-apprunner.yml
@@ -6,25 +6,51 @@ Parameters:
     Type: String
     Description: GitHub repository URL
     Default: 'https://github.com/umair2602/polaris-rfp.git'
-  
+
   BranchName:
     Type: String
     Description: Branch name to deploy
     Default: 'main'
-  
+
   Environment:
     Type: String
     Description: Environment name
     Default: 'production'
     AllowedValues: ['development', 'staging', 'production']
-  
+
   CodeStarConnectionArn:
     Type: String
     Description: ARN of existing App Runner connection for GitHub
     Default: 'arn:aws:apprunner:us-east-1:211125621822:connection/polaris-rfp/577729d32ae34e1380983e866e425016'
 
-Resources:
+  FrontendBaseUrl:
+    Type: String
+    Description: Frontend base URL (used for OAuth redirects)
+    Default: 'https://rfp.polariseco.com'
 
+  CanvaClientId:
+    Type: String
+    Description: Canva Connect Client ID
+    Default: ''
+
+  CanvaClientSecret:
+    Type: String
+    Description: Canva Connect Client Secret
+    NoEcho: true
+    Default: ''
+
+  CanvaRedirectUri:
+    Type: String
+    Description: OAuth redirect URI configured in Canva (backend callback URL)
+    Default: ''
+
+  CanvaTokenEncKey:
+    Type: String
+    Description: Optional encryption key for storing Canva tokens (recommended)
+    NoEcho: true
+    Default: ''
+
+Resources:
   # IAM Role for App Runner
   AppRunnerInstanceRole:
     Type: AWS::IAM::Role
@@ -72,9 +98,19 @@ Resources:
                 - Name: PORT
                   Value: '8080'
                 - Name: FRONTEND_URL
-                  Value: 'https://rfp.polariseco.com'
+                  Value: !Ref FrontendBaseUrl
+                - Name: FRONTEND_BASE_URL
+                  Value: !Ref FrontendBaseUrl
                 - Name: TMPDIR
                   Value: '/tmp'
+                - Name: CANVA_CLIENT_ID
+                  Value: !Ref CanvaClientId
+                - Name: CANVA_CLIENT_SECRET
+                  Value: !Ref CanvaClientSecret
+                - Name: CANVA_REDIRECT_URI
+                  Value: !Ref CanvaRedirectUri
+                - Name: CANVA_TOKEN_ENC_KEY
+                  Value: !Ref CanvaTokenEncKey
         AutoDeploymentsEnabled: true
       InstanceConfiguration:
         Cpu: '1024'
@@ -93,7 +129,6 @@ Resources:
         - Key: Service
           Value: Backend
 
-
 Outputs:
   AppRunnerServiceUrl:
     Description: 'App Runner Service URL'
@@ -106,4 +141,3 @@ Outputs:
     Value: !GetAtt BackendAppRunnerService.ServiceArn
     Export:
       Name: !Sub '${AWS::StackName}-AppRunnerServiceArn'
-
